# Chaikin-algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: InputHandler.hpp  LinkedList.hpp  Util.hpp  Vector.hpp  Window.hpp  curveDraw.hpp
src/: InputHandler.cpp  LinkedList.cpp  Vector.cpp  Window.cpp  curveDraw.cpp  main.cpp
